complete permutations